--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "prettier": "prettier --write \"**/*.{ts,tsx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@react-hookz/web": "^23.0.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.223.0",
@@ -18,6 +22,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
   },
@@ -26,6 +31,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
